# tt_alliance

./: .buildinfo  .gitignore  CMakeLists.txt  Makefile  README.md  alliance  build.sh  config.mk  fast_compile.sh  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
.github/workflows/: docs.yml  ssh.yml
_sources/api/: abase.rst.txt  adata.rst.txt  adata_parts.rst.txt  amath.rst.txt
_static/: documentation_options.js
api/: abase.html  adata.html  adata_parts.html  amath.html  index.html  main.html
cmake/: common.cmake  externals.cmake
components/abase/: CMakeLists.txt  Makefile
components/abase/input/: CommandsNumerics.cpp  CommandsNumerics.h  CommandsTypeFactory.cpp  DataCollector.h
components/abase/src/: ConfigParser.cpp  ConfigParser.h  Environment.h  ErrorManager.cpp  ErrorManager.h  FileLogger.cpp  FileLogger.h  FileReader.cpp  FileReader.h  Filesystem.cpp  Filesystem.h  GlobalTimer.cpp  GlobalTimer.h  LocalPath.cpp  LocalPath.h  String.cpp  String.h  System.cpp  System.h  TranslationManager.cpp  TranslationManager.h
components/adata/: CMakeLists.txt
components/adata/collections/: BaseMaterialCollector.cpp  BaseMaterialCollector.h  Collections.cpp  Collections.h  FatigueLawCollector.h  PlateCoefficientsCollector.cpp  PlateCoefficientsCollector.h
components/adata/src/: ArgumentParser.cpp  ArgumentParser.h  CommandParser.cpp  CommandParser.h  DataManager.cpp  DataManager.h  OutputResume.cpp  OutputResume.h  ProblemDescription.cpp  ProblemDescription.h  ProblemFemInterface.h  ProblemLoadstep.cpp  ProblemLoadstep.h  ProblemMaterial.cpp  ProblemMaterial.h  ProblemPlate.cpp  ProblemPlate.h  ProblemTable.cpp  ProblemTable.h  ProblemTorsor.cpp  ProblemTorsor.h  ProblemTransient.cpp  ProblemTransient.h
components/adata_parts/: CMakeLists.txt
components/adata_parts/description/: ProblemDescription.cpp  (+1 more)
components/amath/: CMakeLists.txt  Makefile
components/amech/: CMakeLists.txt
components/main/: CMakeLists.txt  Makefile
components/main/src/: Initiate.cpp  Initiate.h  StressStates.cpp  StressStates.h  main.cpp
docs/: Makefile
docs/source/: Doxyfile  Doxyfile.ref  Doxyfile_update  conf.py  index.rst
etc/: alliance.conf  alliance_commands.yml  alliance_commands_tree.yml  material_commands.yml  plate_commands.yml
ressources/: ConfigParser.xml  errors.yml  errors_adata.yml  errors_material.yml  main.xml  main.yml  main2.yml  mechanical_problem.yml  numerical_errors.yml
src/: main.cpp
(+86 files in other folders)
